7-pod-quota-mem.busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: quota-demo-ns
spec:
  containers:
  - image: busybox
    name: busybox
    resources:
        limits:
                memory: "100Mi"
        requests:
                memory: "50Mi"
