7-pod-quota-mem.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: quota-demo-ns
spec:
  containers:
  - image: nginx
    name: nginx
    resources:
        limits:
                memory: "100Mi"

        requests:
                memory: "50Mi"
