canary-deploy-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-deploy-v1
spec:
  replicas: 1
  selector:
    matchLabels:
            app: canary-deploy
  template:
    metadata:
      labels:
              app: canary-deploy
    spec:
      volumes:
      - name: webdata
        emptyDir: {}
      containers: 
      - name: nginx
        image: nginx:1.11
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: webdata
          mountPath: "/usr/share/nginx/html"
