deploy-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-1.10
spec:
  replicas: 1
  selector:
    matchLabels:
            app: blue
  template:
    metadata:
      labels:
              app: blue
    spec:
      volumes:
      - name: webdata
        emptyDir: {}
      containers: 
      - name: nginx
        image: nginx:1.10
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: webdata
          mountPath: "/usr/share/nginx/html"
