cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: ngnix
spec:
  selector:
      app: ngnix
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 80
