loadbalancer-blue-green.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nginx
  labels: 
        app: blue-green
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector: 
         #app: green
          app: blue
  type: LoadBalancer
