loadbalancer-canary.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nginx
  labels: 
        app: canary
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector: 
         
          app: canary-deploy
  type: LoadBalancer
