loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx-blue
spec:
  selector:
      app: nginx-blue
  type: LoadBalancer
  ports:
    - nodePort: 31001
      port: 9000
      targetPort: 80
