nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: ngnix
spec:
  selector:
      app: ngnix
  type: NodePort
  ports:
    - nodePort: 31000
      port: 80
      targetPort: 80
